@startuml
title BlaiseConnect - Emploi du temps
left to right direction
hide circle

entity school_years
entity class_levels
entity classes
entity subjects
entity teacher_assignments
entity student_enrollments
entity teachers
entity rooms
entity school_day_schedules
entity break_schedules
entity level_subject_requirements
entity timetables
entity timetable_slots
entity special_courses

school_years ||--o{ school_day_schedules
school_day_schedules ||--o{ break_schedules
school_years ||--o{ level_subject_requirements
class_levels ||--o{ level_subject_requirements
subjects ||--o{ level_subject_requirements
classes ||--o{ timetables
timetables ||--o{ timetable_slots
teacher_assignments ||--o{ timetable_slots
rooms ||--o{ timetable_slots
student_enrollments ||--o{ special_courses
subjects ||--o{ special_courses
teachers |o--o{ special_courses
rooms |o--o{ special_courses

note bottom of timetables
L'algorithme produit un brouillon.
L'administrateur valide avant publication.
end note
@enduml
